# cargo-ui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  about.hbs  about.toml  build.rs  cspell.json
.github/workflows/: build_binary.yaml  build_binary_linux.yaml  build_binary_macos.yaml  build_binary_windows.yaml  rust.yaml  rust.yml
scripts/: prepare_binary_package.sh
src/: cargo.rs  cargo_install.rs  install.rs  main.rs  rustup.rs
ui/: cargo.60  cargo.slint  cargo_install.60  crates_completion.60  crates_completion.slint  install.60  install.slint  main.60  main.slint  rustup.60  rustup.slint
