[package]
name = "cargo-ui"
version = "0.3.3"
authors = ["Slint Developers <info@slint-ui.com>"]
edition = "2021"
build = "build.rs"
license = "GPL-3.0-only"
description = "GUI for cargo"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo", "ui", "gui"]
repository = "https://github.com/slint-ui/cargo-ui"
resolver = "2"

[features]
slint-backend-qt = ["slint/backend-qt"]
slint-backend-gl-all = ["slint/backend-winit", "slint/renderer-winit-femtovg"]
slint-backend-gl-wayland = ["slint/backend-winit-wayland", "slint/renderer-winit-femtovg"]
slint-backend-gl-x11 = ["slint/backend-winit-x11", "slint/renderer-winit-femtovg"]

default = ["slint-backend-qt", "slint-backend-gl-all"]

[dependencies]
anyhow = "1.0.53"
cargo_metadata = "0.18"
crates-index = { version = "2", features = ["git"] }
dunce = "1.0.2"
futures = "0.3"
itertools = "0.12"
open = "5"
rfd = { version = "0.12", default-features = false, features = [ "xdg-portal" ] }
serde = "1.0.136"
serde_json = "1.0.78"
shlex = "1.1"
slint = { version = "1.3", default-features = false, features = [ "compat-1-0" ] }
tokio = { version = "1.24.2", features= ["full"] }
toml_edit = "0.21"
git2 = "0.18"

[build-dependencies]
slint-build = { version = "1.1" }

