[package]
name = "cargo-ui"
version = "0.3.3"
authors = ["Slint Developers <info@slint-ui.com>"]
edition = "2021"
build = "build.rs"
license = "GPL-3.0-only"
description = "GUI for cargo"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo", "ui", "gui"]
repository = "https://github.com/slint-ui/cargo-ui"
resolver = "2"

[features]
slint-backend-default = ["slint/backend-default", "slint/renderer-femtovg"]
slint-backend-qt = ["slint/backend-qt"]
slint-backend-gl-all = ["slint/backend-winit", "slint/renderer-winit-femtovg"]
slint-backend-gl-wayland = ["slint/backend-winit-wayland", "slint/renderer-winit-femtovg"]
slint-backend-gl-x11 = ["slint/backend-winit-x11", "slint/renderer-winit-femtovg"]

default = ["slint-backend-default"]

[dependencies]
anyhow = "1.0.53"
cargo_metadata = "0.18"
crates-index = { version = "3", default-features = false, features = [ "git", "git-https" ] }
dunce = "1.0.2"
futures = "0.3"
itertools = "0.13"
open = "5.1"
rfd = { version = "0.14", default-features = false, features = [ "xdg-portal", "tokio" ] }
serde = "1.0.136"
serde_json = "1.0.78"
shlex = "1.1"
slint = { version = "1.6", default-features = false, features = [ "compat-1-2" ] }
tokio = { version = "1.24.2", features= ["full"] }
toml_edit = "0.22.0"
git2 = "0.19"

[build-dependencies]
slint-build = { version = "1.3" }

