[package]
name = "cargo-ui"
version = "0.3.3"
authors = ["Slint Developers <info@slint-ui.com>"]
edition = "2021"
build = "build.rs"
license = "GPL-3.0-only"
description = "GUI for cargo"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo", "ui", "gui"]
repository = "https://github.com/slint-ui/cargo-ui"
resolver = "2"

[features]
slint-backend-default = ["slint/backend-default", "slint/renderer-femtovg"]
slint-backend-qt = ["slint/backend-qt"]
slint-backend-gl-all = ["slint/backend-winit", "slint/renderer-winit-femtovg"]
slint-backend-gl-wayland = ["slint/backend-winit-wayland", "slint/renderer-winit-femtovg"]
slint-backend-gl-x11 = ["slint/backend-winit-x11", "slint/renderer-winit-femtovg"]

default = ["slint-backend-default"]

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.19"
crates-index = { version = "3", default-features = false, features = [ "git", "git-https" ] }
dunce = "1.0"
futures = "0.3"
itertools = "0.14"
open = "5.1"
rfd = { version = "0.15", default-features = false, features = [ "xdg-portal", "tokio" ] }
serde = "1.0"
serde_json = "1.0"
shlex = "1.1"
slint = { version = "1.9", default-features = false, features = [ "compat-1-2" ] }
tokio = { version = "1.24", features= ["full"] }
toml_edit = "0.22"
git2 = "0.20"

[build-dependencies]
slint-build = { version = "1.9" }

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1

[profile.dev]
opt-level = 1
